--- a/torbanms/packages.config
+++ b/torbanms/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Apache.NMS" version="1.7.1" targetFramework="net461" />
+  <package id="SharpSerializer" version="3.0.1" targetFramework="net461" />
 </packages>
